--- a/test-output/index.html
+++ b/test-output/index.html
@@ -49,7 +49,7 @@
               <ul>
                 <li>
                   <a href="#" class="navigator-link " panel-name="test-xml-Default_suite">
-                    <span>C:\Users\FUJITSU\AppData\Local\Temp\testng-eclipse--1488132227\testng-customsuite.xml</span>
+                    <span>C:\Users\FUJITSU\AppData\Local\Temp\testng-eclipse--492761115\testng-customsuite.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -91,7 +91,7 @@
               <div class="suite-section-content">
                 <ul>
                   <li>
-                    <span class="method-stats">3 methods,   3 passed</span>
+                    <span class="method-stats">2 methods,   2 passed</span>
                   </li>
                   <li>
                     <span class="method-list-title passed">Passed methods</span>
@@ -102,17 +102,12 @@
                     <div class="method-list-content passed suite-Default_suite">
                       <span>
                         <img width="3%" src="passed.png"/>
-                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="test.CreateWishlistTest" hash-for-method="countwishlist">countwishlist</a> <!-- method navigator-link -->
+                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="test.DeleteWishlistTest" hash-for-method="delete">delete</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                       <span>
                         <img width="3%" src="passed.png"/>
-                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="test.CreateWishlistTest" hash-for-method="cretewishlist">cretewishlist</a> <!-- method navigator-link -->
-                      </span>
-                      <br/>
-                      <span>
-                        <img width="3%" src="passed.png"/>
-                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="test.CreateWishlistTest" hash-for-method="logIn">logIn</a> <!-- method navigator-link -->
+                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="test.DeleteWishlistTest" hash-for-method="logIn">logIn</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content passed suite-Default_suite -->
@@ -130,21 +125,14 @@
           <div class="suite-Default_suite-class-passed">
             <div class="main-panel-header rounded-window-top">
               <img src="passed.png"/>
-              <span class="class-name">test.CreateWishlistTest</span>
+              <span class="class-name">test.DeleteWishlistTest</span>
             </div> <!-- main-panel-header rounded-window-top -->
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="countwishlist">
-                  </a> <!-- countwishlist -->
-                  <span class="method-name">countwishlist</span>
-                </div> <!-- method-content -->
-              </div> <!-- method -->
-              <div class="method">
-                <div class="method-content">
-                  <a name="cretewishlist">
-                  </a> <!-- cretewishlist -->
-                  <span class="method-name">cretewishlist</span>
+                  <a name="delete">
+                  </a> <!-- delete -->
+                  <span class="method-name">delete</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
               <div class="method">
@@ -159,7 +147,7 @@
         </div> <!-- panel Default_suite -->
         <div panel-name="test-xml-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">C:\Users\FUJITSU\AppData\Local\Temp\testng-eclipse--1488132227\testng-customsuite.xml</span>
+            <span class="header-content">C:\Users\FUJITSU\AppData\Local\Temp\testng-eclipse--492761115\testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -168,7 +156,7 @@
 &lt;suite guice-stage=&quot;DEVELOPMENT&quot; name=&quot;Default suite&quot;&gt;
   &lt;test thread-count=&quot;5&quot; verbose=&quot;2&quot; name=&quot;Default test&quot;&gt;
     &lt;classes&gt;
-      &lt;class name=&quot;test.CreateWishlistTest&quot;/&gt;
+      &lt;class name=&quot;test.DeleteWishlistTest&quot;/&gt;
     &lt;/classes&gt;
   &lt;/test&gt; &lt;!-- Default test --&gt;
 &lt;/suite&gt; &lt;!-- Default suite --&gt;
@@ -208,24 +196,20 @@ data.addColumn('number', 'Number');
 data.addColumn('string', 'Method');
 data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
-data.addRows(3);
+data.addRows(2);
 data.setCell(0, 0, 0)
-data.setCell(0, 1, 'cretewishlist')
-data.setCell(0, 2, 'test.CreateWishlistTest')
-data.setCell(0, 3, 5391);
+data.setCell(0, 1, 'logIn')
+data.setCell(0, 2, 'test.DeleteWishlistTest')
+data.setCell(0, 3, 5388);
 data.setCell(1, 0, 1)
-data.setCell(1, 1, 'logIn')
-data.setCell(1, 2, 'test.CreateWishlistTest')
-data.setCell(1, 3, 5235);
-data.setCell(2, 0, 2)
-data.setCell(2, 1, 'countwishlist')
-data.setCell(2, 2, 'test.CreateWishlistTest')
-data.setCell(2, 3, 35);
+data.setCell(1, 1, 'delete')
+data.setCell(1, 2, 'test.DeleteWishlistTest')
+data.setCell(1, 3, 134);
 window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 10 seconds</span>
+              <span class="suite-total-time">Total running time: 5 seconds</span>
               <div id="times-div-Default_suite">
               </div> <!-- times-div-Default_suite -->
             </div> <!-- times-div -->
@@ -251,27 +235,23 @@ return data;
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <div class="chronological-class">
-              <div class="chronological-class-name">test.CreateWishlistTest</div> <!-- chronological-class-name -->
+              <div class="chronological-class-name">test.DeleteWishlistTest</div> <!-- chronological-class-name -->
               <div class="configuration-class before">
                 <span class="method-name">setUp</span>
                 <span class="method-start">0 ms</span>
               </div> <!-- configuration-class before -->
               <div class="test-method">
                 <span class="method-name">logIn</span>
-                <span class="method-start">12671 ms</span>
+                <span class="method-start">11510 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
-                <span class="method-name">cretewishlist</span>
-                <span class="method-start">17921 ms</span>
+                <span class="method-name">delete</span>
+                <span class="method-start">16913 ms</span>
               </div> <!-- test-method -->
-              <div class="test-method">
-                <span class="method-name">countwishlist</span>
-                <span class="method-start">23315 ms</span>
-              </div> <!-- test-method -->
-              <div class="configuration-class after">
+              <div class="configuration-test after">
                 <span class="method-name">tearDown</span>
-                <span class="method-start">23354 ms</span>
-              </div> <!-- configuration-class after -->
+                <span class="method-start">17051 ms</span>
+              </div> <!-- configuration-test after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
       </div> <!-- main-panel-root -->
